; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_af_afftdn.c_limit_gain.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_af_afftdn.c_limit_gain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (double (double, double)* @limit_gain to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @limit_gain(double %0, double %1) #0 {
  %3 = alloca double, align 8
  %4 = alloca double, align 8
  %5 = alloca double, align 8
  store double %0, double* %4, align 8
  store double %1, double* %5, align 8
  %6 = load double, double* %4, align 8
  %7 = fcmp ogt double %6, 1.000000e+00
  br i1 %7, label %8, label %18

8:                                                ; preds = %2
  %9 = load double, double* %5, align 8
  %10 = load double, double* %4, align 8
  %11 = fmul double %9, %10
  %12 = fsub double %11, 1.000000e+00
  %13 = load double, double* %5, align 8
  %14 = load double, double* %4, align 8
  %15 = fadd double %13, %14
  %16 = fsub double %15, 2.000000e+00
  %17 = fdiv double %12, %16
  store double %17, double* %3, align 8
  br label %34

18:                                               ; preds = %2
  %19 = load double, double* %4, align 8
  %20 = fcmp olt double %19, 1.000000e+00
  br i1 %20, label %21, label %33

21:                                               ; preds = %18
  %22 = load double, double* %5, align 8
  %23 = load double, double* %4, align 8
  %24 = fmul double %22, %23
  %25 = load double, double* %4, align 8
  %26 = fmul double 2.000000e+00, %25
  %27 = fsub double %24, %26
  %28 = fadd double %27, 1.000000e+00
  %29 = load double, double* %5, align 8
  %30 = load double, double* %4, align 8
  %31 = fsub double %29, %30
  %32 = fdiv double %28, %31
  store double %32, double* %3, align 8
  br label %34

33:                                               ; preds = %18
  store double 1.000000e+00, double* %3, align 8
  br label %34

34:                                               ; preds = %33, %21, %8
  %35 = load double, double* %3, align 8
  ret double %35
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
